# gkill

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  skill客户端需求文档.md
.github/workflows/: release-app.yml  release.yml
crates/gkill/: Cargo.toml
crates/gkill-app/: Cargo.toml  tauri.conf.json
crates/gkill-app/capabilities/: default.json
crates/gkill-app/icons/: icon.icns
crates/gkill-app/src/: lib.rs  main.rs
crates/gkill-app/src/commands/: auth.rs  mod.rs  publish.rs  skills.rs
crates/gkill-app/ui/: Cargo.toml  Trunk.toml  index.html
crates/gkill-app/ui/src/: api.rs  main.rs  state.rs
crates/gkill-app/ui/src/pages/: installed.rs  mod.rs  publish.rs  search.rs  settings.rs
crates/gkill-core/: Cargo.toml
crates/gkill-core/src/: add.rs  agents.rs  api.rs  config.rs  http.rs  install.rs  lib.rs  publish.rs  types.rs  update.rs
crates/gkill/src/: main.rs
crates/gkill/src/commands/: add.rs  install.rs  login.rs  logout.rs  mod.rs  publish.rs  remove.rs  search.rs  update.rs  whoami.rs
docs/: cargo-dist-github-actions-guide.md  feature.md  install.md
workflow-artifacts/: checkpoints.md  progress.md
workflow-artifacts/implementation-design/: phase-1.md  phase-2.md
workflow-artifacts/spec/: phase-1.md  phase-2.md
