[package]
name = "gkill-app"
version = "0.1.4"
edition = "2024"
description = "SkillHub desktop client"
readme = "../../README.md"
repository = "https://github.com/Cocola6s6/gkill.git"
license = "MIT"

[package.metadata.dist]
dist = false

[lib]
name = "gkill_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gkill-app"
path = "src/main.rs"

[dependencies]
gkill-core = { path = "../gkill-core" }
tauri                = { version = "2", features = ["rustls-tls"] }
tauri-plugin-dialog  = "2"
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
anyhow        = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
strip = true
opt-level = "s"
