[package]
name = "gkill-core"
version = "0.1.3"
edition = "2024"

[dependencies]
reqwest    = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
zip        = { workspace = true }
dirs       = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
bytes      = { workspace = true }
indicatif  = { workspace = true }

[dev-dependencies]
tempfile = "3"
