[package]
name = "gkill-ui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gkill-ui"
path = "src/main.rs"

[dependencies]
sycamore        = { version = "0.9", features = ["web"] }
wasm-bindgen    = "0.2"
wasm-bindgen-futures = "0.4"
js-sys          = "0.3"
web-sys         = { version = "0.3", features = ["Window", "HtmlInputElement", "HtmlSelectElement", "Event", "FileList", "File"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
serde-wasm-bindgen = "0.6"
gloo-timers     = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Isolate from parent workspace (WASM target, not native)
[workspace]
